Fixed invisible watchlist select option text

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -758,7 +758,7 @@ select {
     -webkit-appearance: none;   
     border: none;
     text-align: center;
-    background: transparent;
-    color: white;
+    /* background: transparent;
+    color: white; */
     width: 92px;
 }
